ecommerce/ecommerce-boundedContext/networking/ecommerce-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ecommerce-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ecommerce
spec:
  hosts:
  - "*"
  gateways:
  - ecommerce-gateway
  http:
  - match:
    - uri:
        exact: /ecommerce-webapp-angular
#    - uri:
#        prefix: /static
#    - uri:
#        exact: /login
#    - uri:
#        exact: /logout
#    - uri:
#        prefix: /api/v1/products
    route:
    - destination:
        host: ecommerce-webapp-angular
        port:
          number: 80
