ecommerce/ecommerce-boundedContext/networking/fault-injection-webapp-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ecommerce-webapp
spec:
  hosts:
  - ecommerce-webapp
  http:
  - fault:
      abort:
        httpStatus: 555
        percentage:
          value: 100
    route:
    - destination:
        host: ecommerce-webapp
        subset: v1
  - route:
    - destination:
        host: ecommerce-webapp
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ecommerce-webapp
spec:
  host: ecommerce-webapp
  subsets:
  - name: v1
    labels:
      version: v1
